themes/normal/assets/css/main.css
* {
  box-sizing: border-box;
}

html {
  font-family: "Spline Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 300;
  font-style: normal;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "EB Garamond", serif;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
}

body {
  margin: 0;
  display: grid;
  grid-template-rows: auto 1fr auto auto;
  grid-template-columns: minmax(1em, 1fr) minmax(auto, 1024px) minmax(1em, 1fr);
}

header {
  height: 400px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  grid-row: 1 / 2;
  grid-column: 1 / 4;

  > div {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1em;
    background-color: rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(50px);

    a {
      color: white;
      text-decoration: none;
    }

    h1 {
      margin: 0;
      color: white;
    }
  
    nav {
      ul {
        list-style: none;
        display: flex;
        gap: 1em;
        margin: 0;
        padding: 0;
  
        a.active {
          color: #ccc;
        }
      }
    }
  }
}

main {
  grid-row: 2 / 3;
  grid-column: 2 / 3;

  article.blog-post {
    p.summary {
      padding: 1em 0;
      border-top: 1px solid #ccc;
      border-bottom: 1px solid #ccc;
      font-size: 0.8em;
      font-style: italic;
      font-weight: 200;
    }

    ul.metadata {
      list-style: none;
      padding: 0;
      margin: 1em 0;

      li {
        margin: 0.5em 0;
      }
    }
  }

  article {
    p {
      line-height: 1.75rem;
    }

    blockquote {
      font-style: italic;
      border-left: 5px solid #ccc;
      margin: 0;
      padding-inline: 1em;
    }

    img {
      max-width: 100%;
    }

    li {
      margin: 0.5em 0;
    }
  }

  div.section-container.leaf {
    display: block;

    section.subsections {
      display: none;
    }
  }

  div.section-container.blog {
    display: grid;
    grid-template-columns: 3fr 1fr;
    gap: 1em;

    section.subsections {
      grid-column: 2 / 3;
    }

    section.blog-posts {
      grid-column: 1 / 2;
      grid-row: 1 / 2;
    }
  }

  div.section-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1em;

    section.blog {
      grid-column: 1 / 2;

      p.summary {
        line-height: 1.5em;
      }
    }

    section.bluesky-feed {
      grid-column: 2 / 3;

      ul {
        list-style: none;
        padding: 0;

        p.description {
          line-height: 1.5em;
        }
      }
    }
  }

  nav.breadcrumb {
    ul {
      list-style: none;
      padding: 0;
      display: flex;
    }

    li::after {
      content: "<";
      margin: 0.5em;
    }

    li:last-child::after {
      content: "";
      margin: 0;
    }
  }
}

footer {
  grid-row: 3 / 4;
  grid-column: 2 / 3;
  border-top: 1px solid #222;
  margin-top: 1rem;
}

div[class^="iub__"] {
  grid-row: 4 / 5;
  grid-column: 2 / 3;
}

a {
  color: #00e;
  text-decoration: none;
}

@media (max-width: 800px) {
  main > div.section-container {
    display: block;
  }
}

